# zorba-data-formatting-module

./: CMakeLists.txt
cmake_modules/: FindJNI.cmake
src/: CMakeLists.txt  xsl-fo.xq
src/com/zorba-xquery/www/modules/: CMakeLists.txt  xsl-fo.xq
src/com/zorba-xquery/www/modules/xsl-fo.xq.src/: JavaVMSingelton.cpp  JavaVMSingelton.h  xslfo.cpp
src/xsl-fo.xq.src/: xslfo.cpp
test/ExpQueryResults/data-formatting/: xslfo.xml.res
test/Queries/data-formatting/: xslfo.xq
